--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <section class="info">
             <nav>
                 <ul class="lista-nav">
-                    <li class="item-nav"><a href="#">Link 1</a></li>
+                    <li class="item-nav"><a href="#mitad">Cantidad</a></li>
                     <img src="src/img/gota.png" alt="logo-gota" width="20px" />
-                    <li class="item-nav"><a href="#">Link 3</a></li>
+                    <li class="item-nav"><a href="#mitad2">Datos</a></li>
                 </ul>
             </nav>
             <div class="contenido-info">
@@ -49,7 +49,7 @@
         </section>
 
         <section class="datos-numeros-caja">
-            <h2 class="titulo-numeros">CANTIDAD DE DATOS</h2>
+            <h2 id="mitad" class="titulo-numeros">CANTIDAD DE DATOS</h2>
             <div class="contenido-numeros">
                 <div class="datos-numeros">
                     <div class="item-estacion item1">
