modificacion palabra estacion

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="texto-datos">
                 <h2>Registros del Conjunto de Datos</h2>
 
-                <p>Selecciona un filtro para ver los datos</p>
+                <p>Selecciona una estacion para ver los datos</p>
             </div>
 
             <div class="botones">
